examples/v1beta1/simple-gateway/gateway.yaml
#$ Used in:
#$ - site-src/v1beta1/guides/traffic-splitting.md
#$ - site-src/v1beta1/guides/simple-gateway.md
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: prod-web
spec:
  gatewayClassName: acme-lb
  listeners:  
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same
